--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -146,7 +146,7 @@
 
 % Titre, auteur, pas de date
 
-\title{Batch Imitation via Inverse Reinforcement Learning Without Solving the Direct Problem}
+\title{Classification structurée pour l'apprentissage par renforcement inverse}
 
 \author{\fontsize{12}{12}\selectfont{Edouard Klein\inst{1}\inst{2}, Matthieu Geist\inst{1}, Olivier Pietquin\inst{1}\inst{3}}}
 
@@ -168,14 +168,14 @@ GeorgiaTech-CNRS, France
 
 
 \begin{abstract}
-  Cette contribution traite du problème de l'apprentissage par imitation par le biais de l'apprentissage par renforcement inverse ({\it Inverse Reinforcement Learning, IRL}). Dans ce contexte, un expert accomplit une tâche qu'un agent doit essayer de reproduire. L'IRL part du postulat que l'expert optimise avec succès une fonction d'utilité et cherche à deviner cette fonction (appelée récompense) avec pour entrée une trace du comportement de l'expert. Les algorithmes d'IRL existants nécessitent une ou plusieurs des conditions suivantes pour fonctionner : trajectoires complètes de la part de l'expert, un modèle génératif pour les estimations de type Monte-Carlo, la connaissance des probabilités de transition, la capacité de résoudre le problème direct (celui du {\it Reinforcement Learning, RL}) de manière répétée et l'accès à la strategie complète de l'expert. Notre contribution consiste en un nouvel algorithme d'IRL levant toutes ces contraintes. En utilisant une méthode supervisée dans laquelle nous introduisons implicitement la structure du processus décisionnel de Markov ({\it Markov Decision Process, MDP}) sous-jacent, nous créons un algorithme basé sur une descente de sous gradient et possèdant une faible complexité tant en échantillons que calculatoire.
+  Cette contribution traite du problème de l'apprentissage par imitation par le biais de l'apprentissage par renforcement inverse ({\it Inverse Reinforcement Learning, IRL}). Dans ce contexte, un expert accomplit une tâche qu'un agent doit essayer de reproduire. L'IRL part du postulat que l'expert optimise avec succès une fonction d'utilité ; le problème consiste à deviner cette fonction (appelée récompense) avec pour entrée une trace du comportement de l'expert. Les algorithmes d'IRL existants nécessitent une ou plusieurs des conditions suivantes pour fonctionner : trajectoires complètes de la part de l'expert, un modèle génératif pour les estimations de type Monte-Carlo, la connaissance des probabilités de transition, la capacité de résoudre le problème direct (celui du {\it Reinforcement Learning, RL}) de manière répétée ou l'accès à la strategie complète de l'expert. Notre contribution consiste en un nouvel algorithme d'IRL levant toutes ces contraintes. En utilisant une méthode supervisée dans laquelle nous introduisons implicitement la structure du processus décisionnel de Markov ({\it Markov Decision Process, MDP}) sous-jacent, nous créons un algorithme basé sur une descente de sous gradient, possèdant une faible complexité tant en échantillons que calculatoire et ne nécessitant pas la résolution du problème direct.
   \motscles{Apprentissage par renforcement, Apprentissage par renforcement inverse, Processus Decisionnel de Markov}
 \end{abstract}
 %%%%%
 \section{Introduction}
 %%%%%
 \begin{itemize}
-\item Introduction informelle sur les processus de décision séquentiels
+\item Introduction informelle sur les processus de décision séquentielles
 \item Intérêt de l'apprentissage par démonstration
 \item Intérêt de l'IRL pour faire de l'apprenticeship learning
 \item Rapide point sur les limitations des algos d'IRL actuels
@@ -302,10 +302,9 @@ Penchons nous sur le rôle de $l$ : cette fonction permet à l'opérateur d'intr
 
 
 Comme nous l'avons vu Equation \ref{Qmu.eqn}, en faisant l'hypothèse d'une représentation linéaire selon certains attributs $\psi : S\rightarrow \mathbb{R}^p$ de la fonction de récompense il est possible d'exprimer la fonction de qualité d'une politique en fonction de la {\it feature expectation} de cette politique. L'expert ne déroge pas à cette règle et notant $\mu_E$ la {\it feature expectation} de l'expert nous pouvons donc faire l'hypothèse que la fonction $q$ que nous recherchons peut s'exprimer sous la forme $q(s,a) = \theta^T\mu_E(s,a)$. Le calcul de ce terme $\mu_E$, bien que présentant quelques subtilités ne pose pas de problème majeurs même lorsque les seules données auquel l'algorithme a accès consistent en une trace de l'expert (cela est expliqué en sous-section \ref{calculmu.sec}). Nous pouvons donc maintenant exprimer notre risque non plus comme une fonction de $q$ mais comme une fonction du vecteur de paramètres $\theta$, vecteur qui définit la récompense (Equation \ref{hatRdef.eqn}).
-   \begin{eqnarray}
-   R_N(\theta) &=& {1\over N} \sum_{i=1}^N\left(\theta ^T \mu_E(s_i,a^*_i) + l(s_i,a^*_i) - \theta ^T \mu_E(s_i,a_i) \right)\\
-   &=& {1\over N} \sum_{i=1}^N\left(\theta^T\left(\mu_E(s_i,a^*_i) - \mu_E(s_i,a_i)\right) + l(s_i,a^*_i)  \right).
-   \end{eqnarray}
+   \begin{equation}
+   R_N(\theta) = {1\over N} \sum_{i=1}^N\left(\theta ^T \mu_E(s_i,a^*_i) + l(s_i,a^*_i) - \theta ^T \mu_E(s_i,a_i) \right)
+   \end{equation}
    Il est possible de minimiser ce risque grâce à la règle d'update qui suit, comme cela est expliqué en section \ref{proof.sec} :
    \begin{equation}
    \theta_{t+1} = \theta_t -\alpha_t{{1\over N}\sum\limits_{i=1}^N\left(\mu_E(s_i,a^*_i) - \mu_E(s_i,a_i)\right)\over ||{1\over N}\sum\limits_{i=1}^N\left(\mu_E(s_i,a^*_i) - \mu_E(s_i,a_i)\right)||_2}.
@@ -333,12 +332,16 @@ convergera vers la valeur exacte recherchée. Ce sont les algorithmes du type \e
 \end{equation}
 pour obtenir la valeur exacte de la {\it feature expectation}.\\
 
-Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ l'on utilise
+Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer 
+\begin{equation}
+\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]
+\end{equation}
+ l'on utilise
 \begin{equation}
 \hat\mu_E(s,a) = {1\over N}\sum\limits_{i=1}^{N}\sum\limits_{t}\gamma^t\phi(s), s_0=s, a_0=a, a_{t>0} = \pi_E(s_t).
 \end{equation}
 
-Finalement, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ (\citep{klein2011batch}) dans sa version \emph{on-policy}. Cet algorithme se base également sur la similarité entre les definitions de $\mu$ et $Q$ mais au lieu d'adapter un algorithme de programmation dynamique comme nous venons d'en donner l'exemple, il adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch} et {\it offline}. Une approximation de la forme $\hat{\mu}_i^\pi(s) = (\xi_i^*)^T \psi(s)$ est obtenue grâce à la solution des moindres carrés : 
+Finalement, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ (\citep{klein2011batch}) dans sa version \emph{on-policy}. Cet algorithme se base également sur la similarité entre les definitions de $\mu$ et $Q$ mais au lieu d'adapter un algorithme de programmation dynamique comme nous venons d'en donner l'exemple, il adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch} et {\it offline}. Une approximation de la forme $\hat{\mu}_i^\pi(s) = (\xi_i^*)^T \psi(s)$ pour chacune des composantes $i$ de $\mu^\pi$ est obtenue grâce à la solution des moindres carrés : 
 \begin{equation}
   \xi_i^* = \left(\sum_{t=1}^n
   \psi(s_t)(\psi(s_t)-\gamma\psi(s_{t+1}))^T\right)^{-1}
@@ -412,6 +415,15 @@ R_N(\theta^*)=\inf_{\theta \in \mathbb{R}^p}R_N(\theta).
 Nous allons montrer l'existence de ce $\theta^*$ dans un cas particulier.
 
 %%%%%
+\section{Related Work}
+%%%%%
+\begin{itemize}
+\item Résumé plus détaillé que précédemment des approches IRL actuelles
+\item Laïus sur Ratliff et son approche locale (imitation pure) et globale (plain de contraintes)
+\end{itemize}
+
+
+%%%%%
 \section{Résultats expérimentaux}
 \label{exp.sec}
 %%%%%
@@ -422,16 +434,17 @@ Le problème du pendule inversé consiste à maintenir en équilibre vertical un
 
 La politique ainsi trouvée parvient systématiquement à maintenir le pendule en équlibre durant 3000 pas de temps. Ces derniers ayant une valeur d'un dixième de seconde, cela signifie que nous interrompons l'expert après 5 minutes de contrôle sans chute du pendule.\\
 
-Le but de cette expérience est de montrer que notre algorithme est capable, à partir des seuls transitions fournies par l'expert et de la définition des fonctions de bases, de retrouver une récompense telle qu'un agent entraîné sur cette récompense puisse lui aussi faire balancer le pendule durant 5 minutes sans échec. Cela n'est pas trivial étant donné que l'espace d'état est continu et que les données fournies par l'expert n'en couvrent qu'une petite partie (correspondant à la position verticale). Ce dernier point est d'ailleur la raison pour laquelle l'algorithme d'\citet{abbeel2004apprenticeship} ne parvient pas à résoudre le problème à l'aide des seules transitions de l'expert.\\
+Le but de cette expérience est de montrer que notre algorithme est capable, à partir des seules transitions fournies par l'expert et de la définition des fonctions de bases, de retrouver une récompense telle qu'un agent entraîné sur cette récompense puisse lui aussi faire balancer le pendule durant 5 minutes sans échec. Cela n'est pas trivial étant donné que l'espace d'état est continu et que les données fournies par l'expert n'en couvrent qu'une petite partie (correspondant à la position verticale).\\
 
-En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fournir quelques transitions aléatoires couvrant tout l'espace d'état il est impossible d'utiliser les algorithmes itératifs du type de celui d'\citet{abbeel2004apprenticeship} car ceux-ci requièrent la résolution du problème direct à chaque itération ; résolution qui ne peut se faire si l'on ne dispose que de données ne couvrant qu'une petite partie de l'espace d'état. Comme notre algorithme ne nécessite pas la résolution du problème direct, il ne rencontre pas ce problème.
+ Ce dernier point est d'ailleur la raison pour laquelle l'algorithme d'\citet{abbeel2004apprenticeship} ne parvient pas à résoudre le problème à l'aide des seules transitions de l'expert.
+En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fournir quelques transitions aléatoires couvrant tout l'espace d'état il est impossible d'utiliser les algorithmes itératifs du type de celui d'\citet{abbeel2004apprenticeship}. Ces algorithmes procèdent par itérations à l'élaboration d'une politique $\pi$ dont la {\it feature expectation} est utilisée en association à celle de l'expert. Cette politique est obtenue par optimisation d'une récompense sur le MDP dans lequel évolue l'expert ; cette résolution du problème direct à chaque itération ne peut se faire si l'on ne dispose que de données ne couvrant qu'une petite partie de l'espace d'état. Comme notre algorithme ne nécessite pas le calcul d'autre {\it feature expectation} que celle de l'expert, la résolution du problème direct est inutile et nous ne rencontrons pas ce problème.
 %%%
 \subsection{Illustration des résultats}
 %%%
 \begin{figure}
   \begin{minipage}[t]{.4\linewidth}
     \begin{center}
-       \includegraphics[width=\textwidth]{LAFEM_Exp3_true_R.pdf}
+       \includegraphics[width=1.2\textwidth]{LAFEM_Exp3_true_R.pdf}
        \caption{Récompense sur laquelle l'expert a été entraîné}
        \label{trueR.fig}
     \end{center}
@@ -439,14 +452,14 @@ En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fo
 \hfill
 \begin{minipage}[t]{.4\linewidth}
     \begin{center}
-       \includegraphics[width=\textwidth]{LAFEM_Exp3_lafem_R.pdf}
+       \includegraphics[width=1.2\textwidth]{LAFEM_Exp3_lafem_R.pdf}
        \caption{Récompense trouvée par LAFEM, en vert les positions occupées par l'expert.}
        \label{lafemR.fig}
     \end{center}
 \end{minipage}\\
 \begin{minipage}[t]{.4\linewidth}
     \begin{center}
-       \includegraphics[width=\textwidth]{LAFEM_Exp3_Vexpert.pdf}
+       \includegraphics[width=1.2\textwidth]{LAFEM_Exp3_Vexpert.pdf}
        \caption{Fonction de valeur de l'expert}
        \label{trueV.fig}
     \end{center}
@@ -454,7 +467,7 @@ En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fo
 \hfill
 \begin{minipage}[t]{.4\linewidth}
     \begin{center}
-       \includegraphics[width=\textwidth]{LAFEM_Exp3_Vagent.pdf}
+       \includegraphics[width=1.2\textwidth]{LAFEM_Exp3_Vagent.pdf}
        \caption{Fonction de valeur de l'agent entraîné sur la récompense trouvée par LAFEM}
        \label{lafemV.fig}
     \end{center}
@@ -462,19 +475,19 @@ En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fo
 \end{figure}
 Afin d'étudier le comportement de notre algorithmes, nous avons établi le protocole expérimental suivant :
 \begin{itemize}
- \item Créer une base de données $D_0$ de transitions aléatoires.
- \item Entraîner un expert en utilisant LSPI nourri avec ces transitions ( definissant ainsi $\pi_E : S\rightarrow A$)
- \item Vérifier que l'expert est en mesure de balancer le pendule durant 3000 pas de temps
- \item Créer une base de données $D_E$ de transitions de l'expert, contenant 10 trajectoires de 300 transitions chacune.
- \item Définir $l$ telle que $l(s,a) = 0$ si $a=\pi_E(s)$, $1$ sinon, $l$ est définie sur les états présents dans $D_E$.
- \item Définir $\alpha(t) = 0.1,\forall t$.
- \item Définir $D$ à partir des transitions $D_E$ en enlevant l'état d'arrivée.
- \item Initialiser $\omega_0 = [-1...-1]^T$.
- \item Fixer $T=20$.
- \item Définir $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ comme étant en pratique $\hat\mu_E(s,a) =  \omega^T_{\pi_E}\phi(s,a), \omega_{\pi_E} = LSTD\mu(D_E)$.
- \item Faire tourner LAFEM.
- \item Entrainer un agent sur le problème du pendule inversé, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$.
- \item Vérifier que l'agent parvient lui aussi à maintenir le pendule en équilibre durant 3000 pas de temps.
+ \item créer une base de données $D_0$ de transitions aléatoires ;
+ \item entraîner un expert en utilisant LSPI nourri avec ces transitions ( definissant ainsi $\pi_E : S\rightarrow A$) ;
+ \item vérifier que l'expert est en mesure de balancer le pendule durant 3000 pas de temps ;
+ \item créer une base de données $D_E$ de transitions de l'expert, contenant 10 trajectoires de 300 transitions chacune ;
+ \item définir $l$ telle que $l(s,a) = 0$ si $a=\pi_E(s)$, $1$ sinon, $l$ est définie sur les états présents dans $D_E$ ;
+ \item définir $\alpha(t) = 0.1,\forall t$ ;
+ \item définir $D$ à partir des transitions $D_E$ en enlevant l'état d'arrivée ;
+ \item initialiser $\omega_0 = [-1...-1]^T$ ;
+ \item fixer $T=20$ ;
+ \item définir $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ comme étant en pratique $\hat\mu_E(s,a) =  \omega^T_{\pi_E}\phi(s,a), \omega_{\pi_E} = LSTD\mu(D_E)$ ;
+ \item faire tourner LAFEM ;
+ \item entrainer un agent sur le problème du pendule inversé, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$ ;
+ \item vérifier que l'agent parvient lui aussi à maintenir le pendule en équilibre durant 3000 pas de temps.
 \end{itemize}
 
 Si la fonction de récompense trouvée par LAFEM (figure \ref{lafemR.fig}) diffère de celle fournie à l'expert (figure \ref{trueR.fig}) on constate en revanche que les fonctions de valeurs sont très similaires (figures \ref{trueV.fig} et \ref{lafemV.fig}). Cela est une illustration du fait que le problème de l'IRL est mal posé en ceci qu'il n'y a pas qu'une seule récompense pouvant expliquer une politique.\\
@@ -483,20 +496,13 @@ Avec le nombre d'échantillons fournis par l'expert (3000 en 10 trajectoires de 
 
 Deux éléments méritent d'être notés. Tout d'abord la faible couverture de l'espace d'état offerte par les échantillons de l'expert. Ceux-ci sont portés en vert sur la Figure \ref{lafemR.fig} et l'on constate qu'ils n'occupent qu'une toute petite partie de l'espace : celle dans laquelle le pendule est proche de la verticale. En l'absence de données dans le reste de l'espace d'état il n'est pas possible de pouvoir y inférer avec certitude la récompense. Le second point à noter est que la "vraie" récompense ne se trouve pas dans l'espace d'hypothèse que notre algorithme explore, en effet les attributs proposés dans le problème du pendule inversé par \citet{lagoudakis2003least} consistent en un réseau de gaussiennes qui ne peuvent qu'approximer la fonction de récompense utilisée sans l'atteindre.\\
 
-Malgré ces deux difficultés, notre algorithme parvient comme nous l'avons dit à extraire une récompense qui permet à un agent d'obtenir des performances similaires à celles de l'expert. 
+Malgré ces deux difficultés, notre algorithme parvient comme nous l'avons dit à extraire une récompense qui permet à un agent d'obtenir des performances similaires à celles de l'expert.\\
 
-%%%%%
-\section{Related Work}
-%%%%%
-\begin{itemize}
-\item Résumé plus détaillé que précédemment des approches IRL actuelles
-\item Laïus sur Ratliff et son approche locale (imitation pure) et globale (plain de contraintes)
-\end{itemize}
+La différence dans les amplitudes des récompenses et des fonctions de valeurs n'est pas un problème, c'est en effet un résultat connu en apprentissage par renforcement que multiplier fonction de récompense ou fonction de valeur par une constante positive n'impacte pas les politiques.
 \section{Conclusion and future work}
 \begin{itemize}
 \item On enlève les contraintes du domaine d'un seul coup,
 \item Il ne reste que la sélection ou détection de features, mais ce n'est pas hors de portée
-\item Dans la même veine, il reste la résolution du problème direct une fois la récompense obtenue, il faut peut-être creuser du côté du reward shaping
 \item Faible complexité computationnelle
 \item Faible complexité en échantillons
 \item Il reste des tests à faire sur le Highway driving (Pour ICML ?) et sur des expériences dans la vraie vie (bras robot ?) pour comparer à l'existant
