--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -353,21 +353,21 @@ On définit pour chaque $i\in\{1,\dots,N\}$ et pour chaque $a\in A$, où $A$ est
 \begin{equation}
 f_{(i,a)}({\theta})=\theta ^T \mu_E(s_i,a) + l(s_i,a).
 \end{equation}
-Il est évident que $f_{i,a}$ est une fonction convexe, propre et fermée à valeurs finies. De plus elle est continue. On définit aussi pour chaque $i\in\{1,\dots,N\}$, les fonctions $g_{i}$ qui sont des fonctions de ~$\mathbb{R}^p$ vers ~$\mathbb{R}$ par :
+Il est évident que $f_({i,a})$ est une fonction convexe, propre et fermée à valeurs finies. De plus elle est continue. On définit aussi pour chaque $i\in\{1,\dots,N\}$, les fonctions $g_{i}$ qui sont des fonctions de ~$\mathbb{R}^p$ vers ~$\mathbb{R}$ par :
 \begin{equation}
 g_{i}({\theta})=-\theta ^T \mu_E(s_i,a_i).
 \end{equation}
 Il est évident que $g_{i}$ est une fonction convexe, propre et fermée à valeurs finies. De plus elle est continue.
 Comme ~$\A$ est fini, alors on peut définir pour chaque $i\in\{1,\dots,N\}$, les fonctions $h_{(i,a)}$ qui sont des fonctions de ~$\mathbb{R}^p$ vers ~$\mathbb{R}$ par :
 \begin{equation}
-h_{i}({\theta})=\max_{a \in A}\theta ^T \mu_E(s_i,a) + l(s_i,a)=\max_{a \in A}f_{(i,a)}({\theta}).
+h_{i}({\theta})=\max_{a \in A}(\theta ^T \mu_E(s_i,a) + l(s_i,a))=\max_{a \in A}f_{(i,a)}({\theta}).
 \end{equation}
 La fonction $g_{i}$ étant défini comme un maximum sur un ensemble fini de fonctions continues, convexes, propres et fermées à valeurs finies est encore continue, convexe, propre et fermée à valeurs finies.
 Finalement il vient que l'on peut écrire pour tout ~$\theta$ :
 \begin{equation}
 R_N(\theta) = {1\over N} \sum_{i=1}^N g_{i}({\theta})+h_{i}({\theta}).
 \end{equation}
-Ainsi $R_N$ est la somme finie de fonctions convexes, propres, fermées et continues à valeurs finies, elle aura donc ces propriétés et est définie correctement. On voit donc que la fonction $R_N$ est une bonne candidate à l'application du théorème \ref{theoreme.sec} sous réserve de l'existence d'un ~$\theta^*$ tel que :
+Ainsi $R_N$ est la somme finie de fonctions convexes, propres, fermées et continues à valeurs finies, elle aura donc ces propriétés et est définie correctement. On voit donc que la fonction $R_N$ est une bonne candidate à l'application du théorème \ref{theoreme.sec} sous réserve de l'existence d'un ~$\theta^*\in\mathbb{R}^p$ tel que :
 \begin{equation}
 R_N(\theta^*)=\inf_{\theta \in \mathbb{R}^p}R_N(\theta).
 \end{equation}
@@ -387,73 +387,75 @@ Supposons l'existence d'un ~$\hat{\theta}\in\mathbb{R}^p$ vérifiant :
 \begin{equation}\label{eq:existence}
 \forall i\in\{1,\dots,N\}, \hat{\theta}^T\mu_E(s_i,a_i)>\max_{A \backslash a_i}\hat{\theta}^T\mu_E(s_i,).
 \end{equation}
-Notons ~$\hat{\theta}_x=x\frac{\hat{\theta}}{\|\hat{\theta}\|_2}\in\mathbb{R}^p$ avec $x\geq0$,{ et ~$\hat{M}=\{\theta\in\mathbb{R}^p:\theta \text{ vérifie \ref{eq:existence} }  \}$ et posons :
+En toute généralité, un vecteur de récompense vérifiant l'équation \ref{eq:existence} est tel que la politique de l'expert est optimale pour cette récompense sur les états
+$s_i, \forall i\in\{1,\dots,N\}$.\\
+Notons ~$\hat{\theta}_x=x\frac{\hat{\theta}}{\|\hat{\theta}\|_2}\in\mathbb{R}^p$ avec $x\geq0$,{ et ~$\hat{M}=\{\theta\in\mathbb{R}^p:\theta \text{ vérifie l'équation \ref{eq:existence} }  \}$ et posons :
 \begin{equation}
 \forall i\in\{1,\dots,N\}, \beta_i=\hat{\theta}_1^T\mu_E(s_i,a_i)-\max_{A \backslash a_i}\hat{\theta}_1^T\mu_E(s_i,).
 \end{equation}
 Montrons qu'il existe un $x\geq0$ tel que :
 \begin{equation}
-R_N(\hat{\theta}_x)\geq {1\over N} \sum_{i=1}^N l(s_i,a_i),
+R_N(\hat{\theta}_x)= {1\over N} \sum_{i=1}^N l(s_i,a_i),
 \end{equation}
-et cela nous assurera que ~$\hat{\theta}_x\in M^*$ d'après la minoration  ~$R_N(\theta)\geq {1\over N} \sum_{i=1}^Nl(s_i,a_i), \forall \theta\in\mathbb{R}^p$.
+et cela nous assurera que ~$\hat{\theta}_x\in M^*$ d'après la minoration ~$R_N(\theta)\geq {1\over N} \sum_{i=1}^Nl(s_i,a_i),~\forall~\theta~\in~\mathbb{R}^p$.
 \begin{preuve}
 On va chercher $x\geq0$ tel que :
 \begin{align}
 &\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i)-\max_{a\in A \backslash a_i}\hat{\theta}_x^T\mu_E(s_i,) + l(s_i,a_i)-\max_{A \backslash a_i}l(s_i,a)\geq0,
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
 &\forall i\in\{1,\dots,N\}, x\beta_i \geq\max_{a\in A \backslash a_i}l(s_i,a)-l(s_i,a_i),
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
 &\forall i\in\{1,\dots,N\}, x\geq\frac{\max_{a\in A \backslash a_i}l(s_i,a)-l(s_i,a_i)}{\beta_i}.
 \end{align}
-Or comme ~$\max_{A \backslash a_i}\hat{\theta}_x^T\mu_E(s_i,)+\max_{a\in A \backslash a_i}l(s_i,a)\geq\max_{A \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,)+l(s_i,a))$ il est clair que :
+Or comme ~$\max_{A \backslash a_i}\hat{\theta}_x^T\mu_E(s_i,)+\max_{a\in A \backslash a_i}l(s_i,a)~\geq~\max_{A \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,)~+~l(s_i,a))$, il est clair que :
 \begin{align}
 &\forall i\in\{1,\dots,N\}, x\geq\frac{\max_{a\in A \backslash a_i}l(s_i,a)-l(s_i,a_i)}{\beta_i},
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
-&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i)-\max_{a \in A \backslash a_i}\hat{\theta}_x^T\mu_E(s_i,) + l(s_i,a_i)-\max_{A \backslash a_i}l(s_i,a)\geq0,
+&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i)-\max_{a \in A \backslash a_i}\hat{\theta}_x^T\mu_E(s_i,a) + l(s_i,a_i)-\max_{A \backslash a_i}l(s_i,a)\geq0,
 \\
-\Downarrow
+\nonumber\Downarrow
 \\
-&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i) + l(s_i,a_i)-\max_{a \in A  \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,)+l(s_i,a))\geq0,
+&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i) + l(s_i,a_i)-\max_{a \in A  \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,a)+l(s_i,a))\geq0,
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
-&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i) + l(s_i,a_i)\geq\max_{a \in A \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,)+l(s_i,a)),
+&\forall i\in\{1,\dots,N\}, \hat{\theta}_x^T\mu_E(s_i,a_i) + l(s_i,a_i)\geq\max_{a \in A \backslash a_i}(\hat{\theta}_x^T\mu_E(s_i,a)+l(s_i,a)),
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
-&R_N(\hat{\theta}_x)\geq {1\over N} \sum_{i=1}^N l(s_i,a_i).
+&R_N(\hat{\theta}_x)={1\over N} \sum_{i=1}^N l(s_i,a_i).
 \end{align}
 C'est bien le résultat recherché.
 \end{preuve}
 De plus on peut montrer, toujours sous l'existence de ~$\hat{\theta}$ que $M^*\subset\hat{M}$.
 \begin{preuve}
-Soit ~$\theta^*\in\ M^*$. Sous l'existence de ~$\hat{\theta}$, on a vu qu'il existait un ~$\x>0$ tel que $R_N(\hat{\theta}_x)\geq {1\over N} \sum_{i=1}^N l(s_i,a_i)$, ainsi d'après la minoration $R_N(\theta)\geq {1\over N} \sum_{i=1}^Nl(s_i,a_i), \forall \theta\in\mathbb{R}^p$, $R_N(\theta^*)\geq {1\over N} \sum_{i=1}^N l(s_i,a_i)$.
+Soit ~$\theta^*\in\ M^*$. Sous l'existence de ~$\hat{\theta}$, on a vu qu'il existait un ~$\x>0$ tel que $R_N(\hat{\theta}_x)~=~{1\over N} \sum_{i=1}^N l(s_i,a_i)$, ainsi d'après la minoration $R_N(\theta)~\geq~{1\over N}~\sum_{i=1}^Nl(s_i,a_i),~\forall \theta\in\mathbb{R}^p$, $R_N(\theta^*)~=~{1\over N} \sum_{i=1}^N l(s_i,a_i)$.
 Or on a :
 \begin{align}
-&R_N(\theta^*)\geq {1\over N} \sum_{i=1}^N l(s_i,a_i),
+&R_N(\theta^*)={1\over N} \sum_{i=1}^N l(s_i,a_i),
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
-&\forall i\in\{1,\dots,N\}, (\theta^*)^T\mu_E(s_i,a_i) + l(s_i,a_i)\geq\max_{a \in A \backslash a_i}((\theta^*)^T\mu_E(s_i,)+l(s_i,a))\geq0,
+&\forall i\in\{1,\dots,N\}, (\theta^*)^T\mu_E(s_i,a_i) + l(s_i,a_i)\geq\max_{a \in A \backslash a_i}((\theta^*)^T\mu_E(s_i,a)+l(s_i,a))\geq0,
 \\
-\Updownarrow
+\nonumber\Updownarrow
 \\
 &\forall i\in\{1,\dots,N\},\forall a \in A \backslash a_i,  (\theta^*)^T\mu_E(s_i,a_i)-(\theta^*)^T\mu_E(s_i,a)\geq l(s_i,a)- l(s_i,a_i)>0,
 \\
-\Downarrow
+\nonumber\Downarrow
 \\
 &\forall i\in\{1,\dots,N\}, (\theta^*)^T\mu_E(s_i,a_i)-\max_{a \in A \backslash a_i}(\theta^*)^T\mu_E(s_i,a)>0.
 \end{align}
-D'ou ~$\theta^*\in \hat{M}$. C'est bien ce que l'on rechercher.
+D'ou ~$\theta^*\in \hat{M}$. C'est bien ce que l'on recherchait.
 \end{preuve}
 Ainsi on sait que, sous l'existence de ~$\hat{\theta}$, les minimiseurs de ~$\R_N$ existent (il y en a d'ailleurs une infinité) et vérifient l'équation \ref{eq:existence}.
-On peut donc appliquer l'algorithme de descente de sous-gradient avec l'assurance de la convergence de ce dernier vers un minimiseur de la fonction de risque qui vérifie l'équation \ref{eq:existence}. L'équation \ref{eq:existence} est la formulation mathématique de ce que l'on recherche pour vecteur de récompense $\theta$.
+On peut donc appliquer l'algorithme de descente de sous-gradient avec l'assurance de la convergence de ce dernier vers un minimiseur de la fonction de risque qui vérifie l'équation \ref{eq:existence}. L'équation \ref{eq:existence} est la formulation mathématique de ce que l'on recherche pour vecteur de récompense $\theta$. La politique optimale obtenue à partir de la récompense définie par un minimiseur $\theta^*$ de $R_N$, sous l'existence d'un ~$\hat{\theta}$, aura la même fonction de valeur sur les états $s_i,\forall i\in\{1,\dots,N\}$ que la politique de l'expert car cette dernière est optimale sur les états $s_i,\forall i\in\{1,\dots,N\}$ puisque $\theta^*$ vérifie l'équation \ref{eq:existence}.
 %%%%%
 \section{Résultats expérimentaux}
 \label{exp.sec}
