--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -323,7 +323,7 @@ En supposant un espace d'état de cardinal fini, l'équation de Bellman (Equatio
 \begin{equation}
 \mathbf V^\pi = \mathbf R + \gamma P_\pi\mathbf V^\pi
 \end{equation}
-Il est connu qu'une règle d'update de la forme 
+Il est connu qu'une règle d'update de la forme
 \begin{equation}
 \mathbf V^\pi_{t+1} \leftarrow \mathbf R + \gamma P_\pi\mathbf V^\pi_t
 \end{equation}
@@ -333,7 +333,7 @@ convergera vers la valeur exacte recherchée. Ce sont les algorithmes du type \e
 \end{equation}
 pour obtenir la valeur exacte de la {\it feature expectation}.\\
 
-Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer 
+Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer
 \begin{equation}
 \mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]
 \end{equation}
@@ -342,7 +342,7 @@ Dans le cas plus réaliste où les probabilités de transitions sont inconnues, 
 \hat\mu_E(s,a) = {1\over N}\sum\limits_{i=1}^{N}\sum\limits_{t}\gamma^t\phi(s), s_0=s, a_0=a, a_{t>0} = \pi_E(s_t).
 \end{equation}
 
-Finalement, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ (\citep{klein2011batch}) dans sa version \emph{on-policy}. Cet algorithme se base également sur la similarité entre les definitions de $\mu$ et $Q$ mais au lieu d'adapter un algorithme de programmation dynamique comme nous venons d'en donner l'exemple, il adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch} et {\it offline}. Une approximation de la forme $\hat{\mu}_i^\pi(s) = (\xi_i^*)^T \psi(s)$ pour chacune des composantes $i$ de $\mu^\pi$ est obtenue grâce à la solution des moindres carrés : 
+Finalement, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ (\citep{klein2011batch}) dans sa version \emph{on-policy}. Cet algorithme se base également sur la similarité entre les definitions de $\mu$ et $Q$ mais au lieu d'adapter un algorithme de programmation dynamique comme nous venons d'en donner l'exemple, il adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch} et {\it offline}. Une approximation de la forme $\hat{\mu}_i^\pi(s) = (\xi_i^*)^T \psi(s)$ pour chacune des composantes $i$ de $\mu^\pi$ est obtenue grâce à la solution des moindres carrés :
 \begin{equation}
   \xi_i^* = \left(\sum_{t=1}^n
   \psi(s_t)(\psi(s_t)-\gamma\psi(s_{t+1}))^T\right)^{-1}
@@ -433,7 +433,7 @@ En toute généralité, un vecteur de récompense vérifiant l'équation \ref{eq
 $s_i, \forall i\in\{1,\dots,N\}$.\\
 Notons ~$\hat{\theta}_x=x\frac{\hat{\theta}}{\|\hat{\theta}\|_2}\in\mathbb{R}^p$ avec $x\geq0$,{ et ~$\hat{M}=\{\theta\in\mathbb{R}^p:\theta \text{ vérifie l'équation \ref{eq:existence} }  \}$ et posons :
 \begin{equation}
-\forall i\in\{1,\dots,N\}, \beta_i=\hat{\theta}_1^T\mu_E(s_i,a_i)-\max_{A \backslash a_i}\hat{\theta}_1^T\mu_E(s_i,).
+\forall i\in\{1,\dots,N\}, \beta_i=\hat{\theta}_1^T\mu_E(s_i,a_i)-\max_{A \backslash a_i}\hat{\theta}_1^T\mu_E(s_i,a).
 \end{equation}
 Montrons qu'il existe un $x\geq0$ tel que :
 \begin{equation}
@@ -512,12 +512,12 @@ Un argument revenant parfois est celui qui consiste à voir en l'expert non pas 
 
 Particulièrement, le travail de \citet{ratliff2006maximum} partage des similarités avec le nôtre ; dans \citep{ratliff2006maximum}, les auteurs présentent une méthode d'IRL en posant le problème sous forme d'un \emph{maximum margin classification problem}. La méthode utilisée pour résoudre ce problème peut être ramenée à un algorithme itératif dans la veine de \cite{abbeel2004apprenticeship}, comme cela est expliqué dans \cite{neu2009training}. Vu à un plus haut niveau d'abstraction, la classification a lieu dans l'espace des trajectoires : à un MDP (entrée à classifier) est associée une politique (classe).
 
-   Une seconde publication, \citep{ratliff2007boosting} vient compléter la précédente en incluant du \emph{boosting}. On y voit apparaître à nouveau une fonction de coût empirique (en omettant quelques détails comme par exemple la pondération des trajectoires) : 
+   Une seconde publication, \citep{ratliff2007boosting} vient compléter la précédente en incluant du \emph{boosting}. On y voit apparaître à nouveau une fonction de coût empirique (en omettant quelques détails comme par exemple la pondération des trajectoires) :
    \begin{equation}
    \label{dix.eqn}%On l'appelle comme ça parce que dans le draft et dans le papier de Ratliff elles ont le même numéro : 10.
    {1\over n}\sum\limits_{i=1}^n \left(\theta^T\mu^E_i - \min_\pi\left(\theta^T \mu^\pi - l(\pi)\right)\right) + {\lambda \over 2} ||\theta||^2.
    \end{equation}
-  
+
    On constate la présence d'une fonction de coût $l$ similaire à celle que nous utilisons.
 
    La recherche a lieu dans l'espace des politiques via une méthode de descente de gradient sur les paramètres $\theta$ définissant la récompense, ce qui implique la résolution d'un MDP à chaque itération. En effet, le $\min\limits_\pi(\dots)$ présent dans la fonction de coût est analogue au $\pi^* = \arg\max\limits_\pi V^\pi$ décrivant la résolution classique d'un MDP.
@@ -527,7 +527,7 @@ Particulièrement, le travail de \citet{ratliff2006maximum} partage des similari
    \label{sdef.eqn}
    y^* = \arg\max_{y \in Y} s(x,y)
    \end{equation}
-   Cette fonction de score est apprise dans l'espace fonctionnel en optimisant la fonction suivante, dont celle donnée en \ref{dix.eqn} est une instanciation : 
+   Cette fonction de score est apprise dans l'espace fonctionnel en optimisant la fonction suivante, dont celle donnée en \ref{dix.eqn} est une instanciation :
    \begin{equation}
    \label{rdef.eqn}
    r[s] = {1\over N} \sum_{i=1}^N\left(\max_{y\in Y}(s(x_i,y) + l(x_i,y)) - s(x_i,y_i) \right)
