Signed-off-by: unknown <piot_bil@PIOTLTOP.metz.supelec.local>

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -378,6 +378,8 @@ Alors si la fonction admet un minimum sur ~$\me$, la suite définie par :
 \end{align}
 telle que :
 \begin{align}
+&&\forall \bk\in\mathbb{N}, \alpha_{\bk}>0,
+\\
 &\sum_{\bk=0}^{\bk=+\infty}\alpha_{\bk}=+\infty,
 \\
 &\sum_{\bk=0}^{\bk=+\infty}\alpha_{\bk}^2<+\infty,
